Removed codesmells (#2418)
* Removed codesmells

* Removed rename to Local, codesmell back to test

* Removed rename to Local, codesmell back to test

* Revert the change to resolve build failure

* Revert the change to resolve build failure

* Revert the change to resolve build failure

---------

Co-authored-by: yogesh-hullatti <yogesh.hullatti@hmcts.net>
Co-authored-by: yogesh-hullatti <53007108+yogesh-hullatti@users.noreply.github.com>